test/classes/vass/ref-like-intents/ref-subclass.good
ref-subclass.chpl:14: error: unresolved call 'procRefC(borrowed D?)'
ref-subclass.chpl:6: note: this candidate did not match: procRefC(ref arg: borrowed C?)
ref-subclass.chpl:14: note: because call actual argument #1 with type borrowed D?
ref-subclass.chpl:6: note: is passed to formal 'ref arg: borrowed C?'
